Updated Minecraft to version 1.21.3 Updated NeoForge to version 21.3.48-beta Updated Gradle to version 8.10 Updated ZeroCore to version 1.21.3-2.4.15-SNAPSHOT